--- a/Clinica_Veterinaria/nbproject/private/private.properties
+++ b/Clinica_Veterinaria/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\acc31\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\AlumnoT\\AppData\\Roaming\\NetBeans\\23\\build.properties
